--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(121,32,153,1) 86%);
+    background: linear-gradient(0deg, rgb(84, 155, 160) 0%, rgb(154, 104, 171) 86%);
     background-attachment: fixed;
     margin:0;
     font-family: 'Poppins', sans-serif; 
